kubernetes/06-mongodb-service.yaml
kind: Service
apiVersion: v1

metadata:
  name: mongodb-service
  namespace: easyshop

spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
