kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: easyshop-ingress
  namespace: easyshop

  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  
  rules:
    - host: aba9a53086c294b0ab47b5683108bbf2-784f74b38fb5e7cf.elb.eu-west-1.amazonaws.com.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easyshop-service
                port:
                  number: 80
